# TraitHorizon

./: .gitignore  .readthedocs.yaml  HQC_html.py  README.md  TraitHorizonUI.py  __main__.py  example_with_urls.tsv  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  installation.rst  unit_testing.rst  usage.rst
static/js/: slickgrid.js
static/slickgrid_libs/: style.css
templates/: index.html
traithorizon/: __main__.py  _version.py  routes.py
traithorizon/examples/: example.tsv  example_with_urls.tsv
traithorizon/static/libs/slickgrid/js_old/: slick.columnpicker.js
